--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -5,6 +5,8 @@ on:
   # Runs on pushes targeting the default branch
   push:
     paths: [ "**.html", "**.css", "**.js" ]
+    branches:
+      - main
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
