--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -55,3 +55,4 @@ jobs:
             https://readme-stats-ulgx.vercel.app
             https://storage.ko-fi.com
             https://signal.me
+            googlef8222ce546bd819e.html
