--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -4,7 +4,7 @@ name: Deploy static content to Pages
 on:
   # Runs on pushes targeting the default branch
   push:
-    paths: [ "index.html", "**.css", "**.js", "donate/**", "img/**", "**.xml", "robots.txt" ]
+    paths: [ "index.html", "**.css", "**.js", "donate/**", "favicon.ico", "**.xml", "robots.txt" ]
     branches:
       - main
 
