--- a/hugo.toml
+++ b/hugo.toml
@@ -14,7 +14,7 @@ unsafe = true
 
 [params]
 contentTypeName = "posts"
-showMenuItems = 2
+showMenuItems = 3
 showLanguageSelector = true
 autoCover = true
 showLastUpdated = false
@@ -32,7 +32,7 @@ logoHomeLink = "/"
 languageName = "English"
 
 [languages.en.params]
-menuMore = "Show more"
+menuMore = "More"
 readMore = "Read more"
 readOtherPosts = "Other posts"
 newerPosts = "Newer posts"
@@ -49,17 +49,29 @@ url = "/about"
 weight = 1
 
 [[languages.en.menu.main]]
+identifier = "posts"
+name = "Blog"
+url = "/posts"
+weight = 2
+
+[[languages.en.menu.main]]
 identifier = "donate"
 name = "Donate"
 url = "/donate"
-weight = 2
+weight = 3
+
+[[languages.en.menu.main]]
+identifier = "privacy"
+name = "Privacy policy"
+url = "/privacy"
+weight = 4
 
 
 [languages.pl]
 languageName = "Polski"
 
 [languages.pl.params]
-menuMore = "Pokaż więcej"
+menuMore = "Więcej"
 readMore = "Czytaj dalej"
 readOtherPosts = "Inne posty"
 newerPosts = "Nowsze posty"
@@ -76,7 +88,19 @@ url = "/pl/about"
 weight = 1
 
 [[languages.pl.menu.main]]
+identifier = "posts"
+name = "Blog"
+url = "/pl/blog"
+weight = 2
+
+[[languages.pl.menu.main]]
 identifier = "donate"
 name = "Przekaż darowiznę"
-url = "/pl/donate"
-weight = 2
+url = "/donate"
+weight = 3
+
+[[languages.pl.menu.main]]
+identifier = "privacy"
+name = "Polityka prywatności"
+url = "/pl/privacy"
+weight = 4
