--- a/hugo.toml
+++ b/hugo.toml
@@ -91,7 +91,7 @@ weight = 1
 [[languages.pl.menu.main]]
 identifier = "posts"
 name = "Blog"
-url = "/pl/blog"
+url = "/pl/posts"
 weight = 2
 
 [[languages.pl.menu.main]]
