--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -24,8 +24,11 @@ jobs:
         run: |
           wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb \
           && sudo dpkg -i ${{ runner.temp }}/hugo.deb
-      - name: Install Dart Sass
-        run: sudo snap install dart-sass
+      - name: Install Dependencies
+        run: |
+          sudo apt update
+          sudo apt install openssl -y
+          sudo snap install dart-sass
       - name: Checkout
         uses: actions/checkout@v4
         with:
