--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -45,7 +45,7 @@ jobs:
         run: |
           hugo \
             --minify \
-            --baseURL "${{ steps.pages.outputs.base_url }}/"
+            --baseURL https://adamperkowski.dev
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
