--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@ languageCode = 'en-us'
 theme = 'terminal'
 title = "Adam Perkowski"
 subtitle = "Just a random developer"
-keywords = ['adam', 'perkowski', 'github', 'rust', 'programming', 'developement', 'programmer', 'developer', 'highlightos']
+keywords = ['adam', 'perkowski', 'adamperkowski', 'github', 'rust', 'programming', 'developement', 'programmer', 'developer', 'highlightos']
 enableRobotsTXT = "true"
 
 [sitemap]
