--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -15,8 +15,19 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
+  typos:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+      - run: git fetch origin ${{ github.base_ref }}
+
+      - name: Run spellcheck
+        uses: crate-ci/typos@v1.26.1
+
   build:
     runs-on: ubuntu-latest
+    needs: typos
     env:
       HUGO_VERSION: 0.128.0
     steps:
